# cppgroupwork

./: .gitignore  CMakeLists.txt  README.md  process_test.cpp  test_process_monitor.cpp
.cache/clangd/index/: ActivityMonitorService.cpp.C9F8570D78362FAB.idx  ActivityMonitorService.h.32D0109F40FF590B.idx  Core.h.1B998B1C1631A7F7.idx  DataAggregator.cpp.CA9678434046C376.idx  DatabaseManager.cpp.3A64DEBBF84EFAE3.idx  DatabaseManager.h.FD7CDA98BFFAE509.idx  ILLMCommunicator.h.66D3B881A1145F03.idx  LLMCommunicator.h.5D12131E7E71563F.idx  LoginDialog.cpp.520E0F1E1518AC85.idx  LoginDialog.h.4E21857802271752.idx  MainWindow.h.F28E5EBB2BF67890.idx  RegisterDialog.cpp.F2CE5B8C6CBAABFA.idx  ReportDisplayDialog.h.606AC7A98AF4863A.idx  ReportSettingsDialog.cpp.204B9E702B89C9AE.idx  ReportSettingsDialog.h.D37C04D09CB1EE7F.idx  SubjectDialog.cpp.C87FB3C7B32E88B8.idx  Task.cpp.086F241B4392BA05.idx  TaskDialog.h.A94ADE923B15E93E.idx  TimeLog.cpp.9F990EBFC9065819.idx  TimerWidget.h.A6F261EE8D9ADDBE.idx  User.h.489ABAAAF10AF805.idx  ui_MainWindow.h.1A614A3EAEBDC578.idx  ui_ProfileDialog.h.869A6175E0C4E14F.idx  ui_ReportDisplayDialog.h.A6F51E55DCC029C1.idx  ui_ReportSettingsDialog.h.5265833B8E6CB4B5.idx  ui_TaskDialog.h.82DCA94C1084F37C.idx
src/: cppgroupwork.cpp  cppgroupwork.h  cppgroupwork.ui  main.cpp
src/configs/: llm_config.ini
src/core/: ActivityMonitorService.cpp  ActivityMonitorService.h  DatabaseManager.cpp  DatabaseManager.h  ProcessLink.h  ProcessMonitor.cpp  ProcessMonitor.h  ProcessMonitorService.cpp  ProcessMonitorService.h  Subject.cpp  Subject.h  Task.cpp  Task.h  TimeLog.cpp  TimeLog.h  User.cpp  User.h
src/core/modules/sync/: GroupManager.h  SyncManager.h
src/core/network/: ApiClient.h
src/core/reports/: Core.h  DataAggregator.cpp  DataAggregator.h  IDataAggregator.h  ILLMCommunicator.h  LLMCommunicator.cpp  LLMCommunicator.h  MetricCalculator.cpp  MetricCalculator.h  ReportDataStructures.h  ReportEnums.h  ReportGenerator.cpp  ReportGenerator.h  ReportParameters.h
src/gui/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessLinkSettingsDialog.cpp  ProcessLinkSettingsDialog.h  ProfileDialog.cpp  ProfileDialog.h  ProfileDialog.ui  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  SubjectDialog.cpp  SubjectDialog.h  SubjectDialog.ui  TaskDialog.cpp  TaskDialog.h  TaskDialog.ui  TimerWidget.cpp  TimerWidget.h  TimerWidget.ui  ui_LoginDialog.h  ui_MainWindow.h  ui_ProfileDialog.h  ui_RegisterDialog.h  ui_SubjectDialog.h  ui_TaskDialog.h  ui_TimerWidget.h
src/gui/report/: ReportDisplayDialog.cpp  ReportDisplayDialog.h  ReportDisplayDialog.ui  ReportSettingsDialog.cpp  ReportSettingsDialog.h  ReportSettingsDialog.ui  ui_ReportDisplayDialog.h  ui_ReportSettingsDialog.h
